<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/label_lacar_despesa"
        app:navigationIcon="@drawable/ic_navigate"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid_end"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/guid_start"
        app:layout_constraintEnd_toEndOf="@+id/guid_end"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/label_titulo"
        app:layout_constraintTop_toBottomOf="@+id/tolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_data"
        android:layout_width="0dp"
        android:hint="@string/label_Data"
        android:layout_marginEnd="16dp"
        app:startIconDrawable="@drawable/ic_calendar"
        app:layout_constraintTop_toBottomOf="@id/til_title"
        app:layout_constraintStart_toStartOf="@+id/guid_start"
        app:layout_constraintEnd_toStartOf="@id/til_hora"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="none"
            android:focusable="false"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_hora"
        android:layout_width="0dp"
        android:hint="@string/label_hora"
        app:layout_constraintTop_toTopOf="@id/til_data"
        app:layout_constraintEnd_toEndOf="@id/guid_end"
        app:layout_constraintStart_toEndOf="@+id/til_data"
        app:startIconDrawable="@drawable/ic_timer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="none"
            android:focusable="false"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        app:layout_constraintBottom_toTopOf="@+id/btn_new_task"
        app:layout_constraintStart_toStartOf="@id/guid_start"
        app:layout_constraintEnd_toEndOf="@id/guid_end"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/label_cancelar"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_new_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guid_start"
        app:layout_constraintEnd_toEndOf="@id/guid_end"
        style="@style/Widget.MaterialComponents.Button"
        android:text="@string/label_lacar_despesa"
        android:textAllCaps="false"
        android:layout_marginBottom="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>